gwapi-and-istiogw/istio/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: default
  name: gwapi-to-istiogw
