gwapi-and-istiogw/istio/dr.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: http
spec:
  exportTo:
  - '.'
  host: http
