gwapi-and-istiogw/istio/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
spec:
  parentRefs:
  - name: http-gateway
    namespace: gwapi-to-istiogwservice
  hostnames: ["http.apps.example.com"]
  rules:
  - backendRefs:
    - name: gateway-v1
      namespace: gwapi-to-istiogw
      port: 80
      weight: 100
